--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -1,3 +1,10 @@
+.pagiWrapper {
+    position: absolute;
+    bottom: -50px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
 .pagination {
     display: inline-block;
 }
@@ -12,10 +19,14 @@
 }
 
 .pagination .active {
-    background-color: #4caf50;
-    color: white;
-    border: 1px solid #4caf50;
+    background-color: #c1c0c0;
+    border: 1px solid #a6a4a4;
     text-decoration: underline;
+    padding: 5px;
+    border-radius: 50%;
+    width: 25px;
+    margin-right: 1px;
+    margin-left: 1px;
 }
 
 .link-button {
@@ -24,7 +35,7 @@
     cursor: pointer;
     text-decoration: none;
     display: inline;
-    margin: 0;
+    margin: 10px;
     padding: 0;
 }
 
