--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -5,3 +5,19 @@ table {
     border-collapse: collapse;
     color: rgba(0, 0, 0, 0.87);
 }
+
+.tableWrapper {
+    position: relative;
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    color: rgba(0, 0, 0, 0.87);
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    background-color: #fff;
+    border-top: 1px solid rgba(224, 224, 224, 1);
+    min-width: 890px;
+}
