Add input filter with selection options

--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -8,7 +8,7 @@ table {
 
 .tableWrapper {
     position: relative;
-    margin-top: 5%;
+    margin-top: 25px;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
